--- a/bouble.html
+++ b/bouble.html
@@ -15,13 +15,17 @@
 <body>
 
   
-    <div id="comment-container" class="container mt-3">
-        <h1></h1>
+    <div id="section_container" class="container mt-3">
+        <!-- ul>li#item-$*6>lorem3 -->
+        <ul id="list_ul">
+            <li id="item-1">Lorem, ipsum dolor.</li>
+            <li id="item-2">Accusamus, eos quae.</li>
+            <li id="item-3">Perspiciatis, velit reprehenderit.</li>
+            <li id="item-4">Ipsam, officia dolores.</li>
+            <li id="item-5">Ducimus, sint suscipit.</li>
+            <li id="item-6">Illo, corporis officia?</li>
+        </ul>
     </div>
-
-    <input id="inputFild" type="text" class="text">
-    <button id="btn" type="button">ADD</button>
-
 
 
 
