tazbi code added

--- a/practice.html
+++ b/practice.html
@@ -20,6 +20,54 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <!-- *****************************************  tazbi code  *************************-->
+
+    <!-- <div class="container mt-4">
+        <div class="row">
+            <div class="col text-center">
+                <h3>Subahan Allah</h3>
+                <h1 id="subahanAllahDisplay">0</h1>
+                <button id="subahanAllahincrimentBtn" class="btn btn-primary" type="button">incriment</button>
+                <button id="subahanAllahdecrimentBtn" class="btn btn-primary" type="button">Decriment</button>
+            </div>
+            <div class="col text-center">
+                <h3>AlhamduAllah</h3>
+                <h1 id="alhamduAllahDisplay">0</h1>
+                <button id="alhamduAllahIncrimentBtn" class="btn btn-primary" type="button">incriment</button>
+                <button id="alhamduAllahDecrimentBtn" class="btn btn-primary" type="button">Decriment</button>
+            </div>
+            <div class="col text-center">
+                <h3>Allah Akbar</h3>
+                <h1 id="allahAkbarDisplay">0</h1>
+                <button id="allahAkbarIncrimentBtn" class="btn btn-primary" type="button">incriment</button>
+                <button id="allahAkbarDecrimentBtn" class="btn btn-primary" type="button">Decriment</button>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col text-center"><br><br>
+                <button id="resetBtn" class="btn btn-primary">Reset</button>
+            </div>
+        </div>
+    </div> -->
+
+
+
+
+
+
     <script src="./script/practice.js"></script>
 
 </body>
