tazbi code added

--- a/practice.html
+++ b/practice.html
@@ -29,8 +29,42 @@
 
 
 
+    <!-- *****************************************  comment code  *************************-->
+
+    <!-- <div class="container mt-4">
+        <div class="row">
+            <div class="col">
+                <textarea name="" id="textFild" cols="60" rows="5"></textarea><br>
+                <button id="postBtn" type="button" class="btn btn-primary">POST</button>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <h4>Public post</h4>
+            <div id="postShow">
+
+            </div>
+        </div>
+    </div> -->
 
 
+    <!-- *****************************************  delete code  *************************-->
+
+    <!-- <div class="container mt-4">
+        <div class="row">
+            <div id="hide_this" class="col">
+                <h1>Delete this repo</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolores ratione expedita minus accusamus?
+                    Modi, blanditiis quis, asperiores dolorum nihil sint adipisci animi mollitia tempore libero odio
+                    enim laboriosam perspiciatis iusto?</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col">
+                <input type="text" name="" id="inputFild">
+                <button id="deleteBtn" type="button" disabled>delete</button>
+            </div>
+        </div>
+    </div> -->
 
 
     <!-- *****************************************  tazbi code  *************************-->
