--- a/practice.html
+++ b/practice.html
@@ -15,8 +15,23 @@
 <body>
 
 
+    <!-- *****************************************  bouble and deligate code  *************************-->
 
-
+    <div class="container mt-4">
+        <div class="row">
+            <div class="col">
+                <h2>Deligate function and bouble function</h2>
+                <ul id="li_container">
+                    <li class="list_item">item-1</li>
+                    <li class="list_item">item-2</li>
+                    <li class="list_item">item-3</li>
+                    <li class="list_item">item-4</li>
+                    <li class="list_item">item-5</li>
+                </ul>
+                <button id="addBtn" type="button">Add</button>
+            </div>
+        </div>
+    </div>
 
 
 
